@@ -48,10 +48,11 @@
 SHORT fasp_amg_setup_rs (AMG_data *mgl,
                          AMG_param *param)
 {
-    const SHORT  prtlvl     = param->print_level;
-    const SHORT  cycle_type = param->cycle_type;
-    const SHORT  min_cdof   = MAX(param->coarse_dof,MIN_CDOF);
-    const INT    m          = mgl[0].A.row;
+    const SHORT prtlvl     = param->print_level;
+    const SHORT cycle_type = param->cycle_type;
+    const SHORT csolver    = param->coarse_solver;
+    const SHORT min_cdof   = MAX(param->coarse_dof,MIN_CDOF);
+    const INT   m          = mgl[0].A.row;
     
     // local variables
     SHORT      status = FASP_SUCCESS;
@@ -180,34 +181,37 @@ SHORT fasp_amg_setup_rs (AMG_data *mgl,
         
     }
     
-#if WITH_UMFPACK
-    // Need to sort the matrix A for UMFPACK to work
-    dCSRmat Ac_tran;
-    fasp_dcsr_trans(&mgl[lvl].A, &Ac_tran);
-    fasp_dcsr_sort(&Ac_tran);
-    fasp_dcsr_cp(&Ac_tran, &mgl[lvl].A);
-    fasp_dcsr_free(&Ac_tran);
-#endif
-    
+    // Setup coarse level systems for direct solvers
+    switch (csolver) {
+
 #if WITH_MUMPS
-    // Setup MUMPS direct solver on the coarsest level
-    fasp_solver_mumps_steps(&mgl[lvl].A, &mgl[lvl].b, &mgl[lvl].x, 1);
+        case SOLVER_MUMPS: {
+            // Setup MUMPS direct solver on the coarsest level
+            fasp_solver_mumps_steps(&mgl[lvl].A, &mgl[lvl].b, &mgl[lvl].x, 1);
+            break;
+        }
 #endif
+            
+#if WITH_UMFPACK
+        case SOLVER_UMFPACK: {
+            // Need to sort the matrix A for UMFPACK to work
+            dCSRmat Ac_tran;
+            fasp_dcsr_trans(&mgl[lvl].A, &Ac_tran);
+            fasp_dcsr_sort(&Ac_tran);
+            fasp_dcsr_cp(&Ac_tran, &mgl[lvl].A);
+            fasp_dcsr_free(&Ac_tran);
+            break;
+        }
+#endif
+
+        default:
+            // Do nothing!
+            break;
+    }
 	
     // setup total level number and current level
     mgl[0].num_levels = max_lvls = lvl+1;
     mgl[0].w          = fasp_dvec_create(m);
-    
-/*    
-    INT groups;
-    INT *results;
-    for (lvl=0; lvl<max_lvls && mgl[lvl].A.row>2000; lvl++) {
-        results=(INT *)malloc(sizeof(INT)*mgl[lvl].A.row);
-        dCSRmat_Division_Groups(mgl[lvl].A, results, &groups);
-        printf("row = %d groups = %d \n", mgl[lvl].A.row, groups);
-        free(results);
-    }
-*/
     
     for ( lvl = 1; lvl < max_lvls; ++lvl ) {
         INT mm = mgl[lvl].A.row;
