@@ -107,6 +107,7 @@ static SHORT amg_setup_unsmoothP_unsmoothR (AMG_data *mgl,
 {
     const SHORT prtlvl     = param->print_level;
     const SHORT cycle_type = param->cycle_type;
+    const SHORT csolver    = param->coarse_solver;
     const SHORT min_cdof   = MAX(param->coarse_dof,50);
     const INT   m          = mgl[0].A.row;
     
@@ -267,19 +268,33 @@ static SHORT amg_setup_unsmoothP_unsmoothR (AMG_data *mgl,
         
     }
         
-#if WITH_UMFPACK
-    // Need to sort the matrix A for UMFPACK format
-    dCSRmat Ac_tran;
-    fasp_dcsr_trans(&mgl[lvl].A, &Ac_tran);
-    fasp_dcsr_sort(&Ac_tran);
-    fasp_dcsr_cp(&Ac_tran,&mgl[lvl].A);
-    fasp_dcsr_free(&Ac_tran);
-#endif
-    
+    // Setup coarse level systems for direct solvers
+    switch (csolver) {
+            
 #if WITH_MUMPS
-    /* Setup MUMPS direct solver on the coarsest level */
-    fasp_solver_mumps_steps(&mgl[lvl].A, &mgl[lvl].b, &mgl[lvl].x, 1);
+        case SOLVER_MUMPS: {
+            // Setup MUMPS direct solver on the coarsest level
+            fasp_solver_mumps_steps(&mgl[lvl].A, &mgl[lvl].b, &mgl[lvl].x, 1);
+            break;
+        }
 #endif
+            
+#if WITH_UMFPACK
+        case SOLVER_UMFPACK: {
+            // Need to sort the matrix A for UMFPACK to work
+            dCSRmat Ac_tran;
+            fasp_dcsr_trans(&mgl[lvl].A, &Ac_tran);
+            fasp_dcsr_sort(&Ac_tran);
+            fasp_dcsr_cp(&Ac_tran, &mgl[lvl].A);
+            fasp_dcsr_free(&Ac_tran);
+            break;
+        }
+#endif
+            
+        default:
+            // Do nothing!
+            break;
+    }
     
     // setup total level number and current level
     mgl[0].num_levels = max_levels = lvl+1;
@@ -335,6 +350,7 @@ static SHORT amg_setup_unsmoothP_unsmoothR_bsr (AMG_data_bsr *mgl,
                                                 AMG_param *param)
 {
     const SHORT prtlvl   = param->print_level;
+    const SHORT csolver  = param->coarse_solver;
     const SHORT min_cdof = MAX(param->coarse_dof,50);
     const INT   m        = mgl[0].A.ROW;
     const INT   nb       = mgl[0].A.nb;
@@ -498,29 +514,43 @@ static SHORT amg_setup_unsmoothP_unsmoothR_bsr (AMG_data_bsr *mgl,
         ++lvl;
     }
     
-#if WITH_SuperLU
-    /* Setup SuperLU direct solver on the coarsest level */
-    mgl[lvl].Ac = fasp_format_dbsr_dcsr(&mgl[lvl].A);
-#endif
-    
-    
-#if WITH_UMFPACK
-    // Need to sort the matrix A for UMFPACK format
-    mgl[lvl].Ac = fasp_format_dbsr_dcsr(&mgl[lvl].A);
-    dCSRmat Ac_tran;
-    fasp_dcsr_trans(&mgl[lvl].Ac, &Ac_tran);
-    fasp_dcsr_sort(&Ac_tran);
-    fasp_dcsr_cp(&Ac_tran, &mgl[lvl].Ac);
-    fasp_dcsr_free(&Ac_tran);
-    
-    mgl[lvl].Numeric = fasp_umfpack_factorize(&mgl[lvl].Ac, 5);
-#endif
-    
+    // Setup coarse level systems for direct solvers (BSR version)
+    switch (csolver) {
+            
 #if WITH_MUMPS
-    /* Setup MUMPS direct solver on the coarsest level */
-    mgl[lvl].Ac = fasp_format_dbsr_dcsr(&mgl[lvl].A);
-    fasp_solver_mumps_steps(&mgl[lvl].Ac, &mgl[lvl].b, &mgl[lvl].x, 1);
+        case SOLVER_MUMPS: {
+            // Setup MUMPS direct solver on the coarsest level
+            mgl[lvl].Ac = fasp_format_dbsr_dcsr(&mgl[lvl].A);
+            fasp_solver_mumps_steps(&mgl[lvl].Ac, &mgl[lvl].b, &mgl[lvl].x, 1);
+            break;
+        }
 #endif
+            
+#if WITH_UMFPACK
+        case SOLVER_UMFPACK: {
+            // Need to sort the matrix A for UMFPACK to work
+            mgl[lvl].Ac = fasp_format_dbsr_dcsr(&mgl[lvl].A);
+            dCSRmat Ac_tran;
+            fasp_dcsr_trans(&mgl[lvl].Ac, &Ac_tran);
+            fasp_dcsr_sort(&Ac_tran);
+            fasp_dcsr_cp(&Ac_tran, &mgl[lvl].Ac);
+            fasp_dcsr_free(&Ac_tran);
+            mgl[lvl].Numeric = fasp_umfpack_factorize(&mgl[lvl].Ac, 5);
+            break;
+        }
+#endif
+            
+#if WITH_SuperLU
+        case SOLVER_SUPERLU: {
+            /* Setup SuperLU direct solver on the coarsest level */
+            mgl[lvl].Ac = fasp_format_dbsr_dcsr(&mgl[lvl].A);
+        }
+#endif
+            
+        default:
+            // Do nothing!
+            break;
+    }
     
     // setup total level number and current level
     mgl[0].num_levels = max_levels = lvl+1;
