@@ -167,27 +167,30 @@ ForwardSweep:
     switch (coarse_solver) {
             
 #if WITH_MUMPS
-            /* use MUMPS direct solver on the coarsest level */
-        case SOLVER_MUMPS:
+        /* use MUMPS direct solver on the coarsest level */
+        case SOLVER_MUMPS: {
             fasp_solver_mumps_steps(&mgl[nl-1].A, &mgl[nl-1].b, &mgl[nl-1].x, 2);
             break;
+        }
 #endif
             
 #if WITH_SuperLU
-            /* use SuperLU direct solver on the coarsest level */
-        case SOLVER_SUPERLU:
+        /* use SuperLU direct solver on the coarsest level */
+        case SOLVER_SUPERLU: {
             fasp_solver_superlu(&mgl[nl-1].A, &mgl[nl-1].b, &mgl[nl-1].x, 0);
             break;
+        }
 #endif
             
 #if WITH_UMFPACK
-            /* use UMFPACK direct solver on the coarsest level */
-        case SOLVER_UMFPACK:
+        /* use UMFPACK direct solver on the coarsest level */
+        case SOLVER_UMFPACK: {
             fasp_solver_umfpack(&mgl[nl-1].A, &mgl[nl-1].b, &mgl[nl-1].x, 0);
             break;
+        }
 #endif
             
-            /* use iterative solver on the coarest level */
+        /* use iterative solver on the coarest level */
         default:
             fasp_coarse_itsolver(&mgl[nl-1].A, &mgl[nl-1].b, &mgl[nl-1].x, tol, prtlvl);
             
